force-app/main/default/objects/Account/fields/PPSTN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_ClientID__c</fullName>
    <externalId>true</externalId>
    <label>PPSTN_ClientID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>