force-app/main/default/objects/Account/fields/PPSTN_CLientMNR__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_CLientMNR__c</fullName>
    <label>PPSTN_ClientMNR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>