force-app/main/default/objects/Account/fields/PPSTN_ClientRiskRating__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_ClientRiskRating__c</fullName>
    <label>PPSTN_ClientRiskRating</label>
    <length>6</length>
    <type>Text</type>
</CustomField>