force-app/main/default/objects/Account/fields/PPSTN_HasOffersId__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_HasOffersId__c</fullName>
    <label>PPSTN_HasOffersId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>