force-app/main/default/objects/Account/fields/PPSTN_LegalEntityType__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_LegalEntityType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PPSTN_LegalEntityType</label>
    <referenceTo>PPSTN_LegalEntityType__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>