force-app/main/default/objects/Account/fields/PPSTN_OnboardingStatus__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_OnboardingStatus__c</fullName>
    <label>PPSTN_OnboardingStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>