force-app/main/default/objects/Account/fields/PPSTN_RiskFlag__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_RiskFlag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PPSTN_RiskFlag</label>
    <referenceTo>PPSTN_RiskFlag__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>