force-app/main/default/objects/Account/listViews/PPSTN_Account_Details.listView-meta.xml
<ListView>
    <fullName>PPSTN_Account_Details</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PPSTN_ClientID__c</columns>
    <columns>PPSTN_CLientMNR__c</columns>
    <columns>PPSTN_ClientRiskRating__c</columns>
    <columns>PPSTN_LegalEntityType__c</columns>
    <columns>PPSTN_License__c</columns>
    <columns>PPSTN_RiskFlag__c</columns>
    <columns>PPSTN_OnboardingStatus__c</columns>
    <columns>PPSTN_HasOffersId__c</columns>
    <columns>PPSTN_COR__c</columns>
    <columns>PPSTN_License_Type_SF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PPSTN_ClientID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PPSTN Account Details</label>
</ListView>