force-app/main/default/objects/Account/listViews/PPSTN_ASIC.listView-meta.xml
<ListView>
    <fullName>PPSTN_ASIC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PPSTN_ClientID__c</columns>
    <columns>PPSTN_CLientMNR__c</columns>
    <columns>PPSTN_COR__c</columns>
    <columns>PPSTN_License__c</columns>
    <columns>PPSTN_License_Type_SF__c</columns>
    <columns>PPSTN_OnboardingStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PPSTN_License_Type_SF__c</field>
        <operation>equals</operation>
        <value>ASIC</value>
    </filters>
    <label>PPSTN-ASIC</label>
</ListView>